# plastica

./: .gitignore  Cargo.toml  LICENSE
examples/bunny/: framework.rs  main.rs  mesh.rs  shader.wgsl
src/: cpu.rs  gpu.rs  lib.rs
src/gpu/: add_deltas.rs  distance_solver.rs  postsolve.rs  presolve.rs  shaders.rs  tet_solver.rs
src/gpu/shaders/: add_deltas.wgsl  common.wgsl  postsolve.wgsl  presolve.wgsl  solve_dist.wgsl  solve_tet_vol.wgsl
