[package]
name = "plastica"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.23", features = ["bytemuck"]}
bytemuck = { version = "1.13", features = ["derive", "min_const_generics"]}
rayon = "1.7"
wgpu = "0.16"
wgpu-types = "0.16"
encase = { version = "0.5", features = ["glam"]}

[dev-dependencies]
winit = "0.27"
pollster = "0.2"
env_logger = "0.10"
log = "0.4"
async-executor = "1"